--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=true
 auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
-auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=false
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=app.js
@@ -18,6 +18,7 @@ file.reference.suw16bup1-public_html=public_html
 file.reference.suw16bup1-test=test
 file.reference.suw16bup1-www=www
 files.encoding=UTF-8
-site.root.folder=${file.reference.htdocs-suw16bup1}
+run.as=node.js
+site.root.folder=${file.reference.suw16bup1-www}
 start.file=index.html
 web.context.root=/suw16bup1
