--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -19,6 +19,6 @@ file.reference.suw16bup1-test=test
 file.reference.suw16bup1-www=www
 files.encoding=UTF-8
 run.as=node.js
-site.root.folder=${file.reference.suw16bup1-www}
+site.root.folder=${file.reference.htdocs-suw16bup1}
 start.file=index.html
 web.context.root=/suw16bup1
